# fastrr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  README.md  USAGE.md
docs/plans/: 2026-03-11-memory-history-implementation-plan.md  2026-03-11-memory-management-design.md  2026-03-11-memory-observability-design.md  2026-03-11-memory-observability-implementation-plan.md  2026-03-14-agent-prompt-improvements-design.md  2026-03-14-agent-prompt-improvements-plan.md  2026-03-15-writer-agent-multi-file-routing-design.md  2026-03-15-writer-agent-multi-file-routing.md
evals/: README.md  __init__.py  download.py  fake_repo.py  registry.json
evals/locomo/: __init__.py  ingest.py  locomo_eval.ipynb  run.py
src/fastrr/: __init__.py  client.py  history.py  history_summary.py  template.py
src/fastrr/agents/: __init__.py  reader.py  search.py  toolset.py  writer.py
src/fastrr/core/config/: __init__.py  config.py
src/fastrr/services/repo_manager/: __init__.py  base.py  git_repo_manager.py
src/fastrr/templates/: default_template.json
tests/: conftest.py  test_agents.py  test_client.py  test_config.py  test_history_summary.py  test_repo_manager.py  test_search.py  test_template.py  test_toolset.py
tests_intg/: README.md  conftest.py  test_client_e2e.py
