[project]
name = "fastrr"
version = "0.1.0"
description = "A memory layer for AI applications: per-user, versioned workspaces on disk"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.5",
    "gitpython>=3.1.46",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.0",
    "redisvl>=0.3.9",
]
